# Logistica_ipnext

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pull_request_template.md  pyproject.toml
app/: __init__.py
app/dummy/: __init__.py  views.py
app/interfaces/: interface_logistica.py
app/models/: __init__.py  cliente.py
app/ping/: views.py
app/repositories/: logistica_repositories.py
app/routes/logistica/: __init__.py  routes_logistica.py
app/services/: logistica.py  route_optimizer.py
app/utils/: config.py
